HIVE-20542: Address Hive-QA's comments